--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 /*
-	Theme Name: Ah Ha Foundation
-	Theme URI: http://ahhacreative.com
+	Theme Name: Walker Portfolio
+	Theme URI: http://walkerportfolio.com
 	Description: HTML5 Blank WordPress Theme
 	Version: 1.0.0
-	Author: Amy Haywood Dutton (@ahaywood)
-	Author URI: http://ahhacreative.com
+	Author: Jonathan Walker
 
 	License: MIT
 	License URI: http://opensource.org/licenses/mit-license.php
