--- a/css/main.css
+++ b/css/main.css
@@ -171,6 +171,66 @@ p.nav-logo {
 nav {
     width: 60%;
 }
+/* ======== HAMBURGER MENU ========*/
+.hamburger,
+.hamburger__close {
+	display: none;
+}
+.mobile-nav_display ul {
+  width: 75%;
+  margin: auto;
+  -webkit-padding-start: 0;
+}
+
+@media (max-width: 600px) {
+
+	body {
+		overflow-x: hidden; /* Prevents horiz scrollbar from appearing */
+	}
+	.hamburger,
+	.hamburger__close {
+	  width: 2rem;
+	  position: absolute;
+	  top: 1rem;
+	  right: 1rem;
+	  bottom: 1rem;
+	  cursor: pointer;
+	  display: block;
+	  z-index: 9981;
+	}
+	.nav_hide,
+    p.nav-logo {
+	  display: none;
+	}
+	header {
+	  position: relative;
+	}
+	nav {
+	  position: fixed;
+	  width: 100%;
+	  height: 100vh;
+	  background-color: rgba(2,10, 16, 0.97);
+	  top: 0;
+	  z-index: 9980;
+	  right: -105%;
+	  opacity: 0;
+	  transition: right 0.3s ease-in, opacity 0.25s ease-in;
+	  display: block;
+	}
+	nav ul li {
+	    display: block;
+	    text-align: center;
+		font-size: 1.2em;
+        margin: 1em;
+	}
+	nav.mobile-nav_display {
+	  right: 0 !important; /* !!!! Do not move because it depends on the cascade to work properly!!!! */
+	  top: 0;
+	  opacity: 1;
+	  transition: right 0.3s ease-in, opacity 0.3s ease-in;
+	  display: block;
+	}
+}
 /* ========== Home Styles ========== */
 section.splash p {
 	width: 85%;
