Disable bloated styles to be reworked

--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,7 @@ body {
 	background-color: rgb(2,10,16);
 	position: relative;
 }
-main {
+/*main {
 	max-width: 505px;
 	margin: 0 auto 20%;
 	background-color: rgb(2,10,16);
@@ -55,7 +55,7 @@ section {
 }
 article{
 	margin: 10% 0;
-}
+}*/
 aside {
 	width: 94%;
 	padding: 0 3%;
@@ -118,9 +118,9 @@ img {
 	width: 100%;
 	max-width: 750px;
 }
-.space-top {
+/*.space-top {
 	margin-top: 20%;
-}
+}*/
 
 /* ========== Nav Styles ========== */
 header {
@@ -237,21 +237,6 @@ section.splash p {
 	margin: auto;
 	text-align: center;
 }
-/*section.teaser {
-	margin-bottom: 0;
-	padding: 2% 3% 4%;
-}
-section.teaser p {
-	width: 60%;
-	display: inline-block;
-	padding: 0;
-}
-section.teaser div {
-	width: 34%;
-	display: inline-block;
-	vertical-align: top;
-	padding-left: 3%;
-}*/
 p.action {
 	padding: 2%;
 }
@@ -297,14 +282,14 @@ img.arrow-bounce {
 	animation-iteration-count: infinite;
 	animation-direction: alternate;
 }
-#projects {
+/*#projects {
 	padding: 20% 3% 10%;
 	margin: 0;
 	float: left;
-}
+}*/
 /* ========== END Home Styles  ========== */
 /* ========== Project Styles  ========== */
-section.short {
+/*section.short {
 	background-image: url(../img/short-bkg.jpg);
 	background-attachment: fixed;
 	background-position: top center;
@@ -313,8 +298,8 @@ section.short {
 	min-height: 160px;
 	margin: 0;
 	padding: 0;
-}
-section.short h2 {
+}*/
+/*section.short h2 {
 	padding: 20% 3% 0;
 	width: 94%;
 	text-align: center;
@@ -324,8 +309,8 @@ section.short h2 {
 section.short h3 {
 	width: 100%;
 	text-align: center;
-}
-.mini {
+}*/
+/*.mini {
 	width: 5%;
 	min-width: 35px;
 	max-width: 50px;
@@ -334,9 +319,6 @@ section.short h3 {
 .skill {
 	padding-top: 0;
 }
-/*aside section.teaser {
-	padding: 3% 3% 3% 0;
-}*/
 .align-rt {
 	text-align: right;
 	margin-right: 12%;
@@ -344,7 +326,7 @@ section.short h3 {
 }
 .css-pix {
 	text-align: center;
-}
+}*/
 .team-bio {
 	max-width: 220px;
 	vertical-align: top;
@@ -353,10 +335,6 @@ section.short h3 {
 .glow {
 	box-shadow: 0 0 15px 0 rgba(254,254,254,.3);
 }
-/*section.teaser p.width-adj, #projects p {
-	width: 100%;
-	padding-bottom: 6%;
-}*/
 #team {
 	padding-top: 6%;
 }
@@ -467,9 +445,9 @@ img.contact-icon {
 	header {
 		padding: 0 2.5%;
 	}
-	section.short h2 {
+	/*section.short h2 {
 		padding-top: 14%;
-	}
+	}*/
 	li.nav-logo img {
 		display: inline;
 		width: 5%;
@@ -479,7 +457,7 @@ img.contact-icon {
 	ul.features li {
 		font-size: .9rem;
 	}
-	form {
+	/*form {
 		margin-top: 35%;
 	}
 	div.contact-info {
@@ -488,7 +466,7 @@ img.contact-icon {
 	.features {
 		display: block;
 		list-style-type: none;
-	}
+	}*/
 	.tagline {
 		margin: 0 0 10%;
 	}
@@ -499,19 +477,19 @@ img.contact-icon {
 /* ========== END Media Query (more than 450px) ========== */
 /* ========== Media Query (more than 700px)  ========== */
 @media (min-width: 700px) {
-	main {
+	/*main {
 		width: 75%;
 		max-width: none;
-	}
+	}*/
 	header {
 		padding: 0 2%;
 	}
 	nav ul {
 		padding: 0;
 	}
-	section.short h2 {
+	/*section.short h2 {
 		padding-top: 10%;
-	}
+	}*/
 	h2.tagline {
 		margin: 0 0 2%;
 		padding: 0;
@@ -519,24 +497,6 @@ img.contact-icon {
 	h2, p {
 		padding-left: 0;
 	}
-	/*section.teaser {
-		float: left;
-		width: 27%;
-		min-height: 375px; /* Allows the floats to go all the way left when there are 2 rows
-	}
-	section.teaser div {
-		width: 100%;
-		padding-left: 0;
-	}
-	section.teaser p {
-		width: 100%;
-	}
-	aside section.teaser {
-		width: 25%;
-	}
-	aside section.teaser:nth-child(2) {
-		margin-left: 7%;
-	}*/
 	p.action {
 		padding: 0.5%;
 	}
@@ -550,12 +510,12 @@ img.contact-icon {
 		max-width: 300px;
 		margin-top: 12%;
 	}
-	.wqop-logo, .pj-pix, .css-pix {
+	/*.wqop-logo, .pj-pix, .css-pix {
 		width: 47%;
 		margin: 3% 0 3% 3%;
 		float: right;
-	}
-	.pj-txt {
+	}*/
+	/*.pj-txt {
 		width: 47%;
 	}
 	.vid-adj {
@@ -563,8 +523,8 @@ img.contact-icon {
 	}
 	.clr-rt {
 		clear: right;
-	}
-	.team-bio {
+	}*/
+	/*.team-bio {
 		width: 40%;
 		margin: 0 2.5% 6%;
 		display: inline-block;
@@ -579,8 +539,8 @@ img.contact-icon {
 		padding-top: 2%;
 		margin-bottom: 10%;
 		vertical-align: top;
-	}
-	.bdr-rt {
+	}*/
+	/*.bdr-rt {
 		border-right: solid 3px rgb(21,41,22);
 	}
 	.mrg-rt {
@@ -593,15 +553,15 @@ img.contact-icon {
 	#ps, #fb, #ai, .pj {
 		padding-top: 5%;
 		margin-bottom: 6%;
-	}
+	}*/
 }
 /* ========== END Media Query (more than 700px) ========== */
 /* ========== Media Query (more than 850px)  ========== */
 @media (min-width: 850px) {
-	section.short h2 {
+	/*section.short h2 {
 		padding-top: 7%;
 		font-size: 2.1rem;
-	}
+	}*/
 	h2.tagline {
 		font-size: 1.4rem;
 	}
@@ -611,60 +571,51 @@ img.contact-icon {
 	.team-bio {
 		width: 27%;
 	}
-	#ai {
+	/*#ai {
 		margin-bottom: 15%;
 	}
-	/*aside section.teaser {
-		width: 23%;
-	}
-	aside section.teaser:nth-child(2) {
-		margin-left: 12%;
-	}*/
 	#css-vid {
 		padding-top: 7%;
 		width: 80%;
 	}
 	#wild-fl {
 		padding-bottom: 11%;
-	}
+	}*/
 }
 /* ========== END Media Query (more than 850px) ========== */
 /* ========== Media Query (more than 1000px)  ========== */
 @media (min-width: 1000px) {
-	section.short h2 {
+	/*section.short h2 {
 		padding-top: 5%;
 		font-size: 2.4rem;
-	}
-	/*section.teaser {
-		width: 16%;
 	}*/
 	article h2 {
 		font-size: 1.8rem;
 	}
 	aside {
 		width: 85%;
-		height: 900px;
+		/*height: 900px;*/
 		margin: auto;
 	}
 	/* This applies to contact page so margin doesn't push the floating elements down too far*/
-	main.top-fix {
+	/*main.top-fix {
 		margin-bottom: 10%;
 		width: 60%;
-	}
+	}*/
 	form {
 		float: left;
 		width: 50%;
 		margin-top: 0;
 	}
 	/*Eliminates space at top of contact text */
-	.space-top {
+	/*.space-top {
 		margin-top: 0;
 	}
 	.wqop-logo {
 		display: inline-block;
 		width: 50%;
 		max-width: 450px;
-	}
+	}*/
 	.logo {
 		width: 30%;
 		min-width: 300px;
@@ -681,7 +632,7 @@ img.contact-icon {
 		padding-right: 1%;
 		vertical-align: middle;
 	}
-	.screen-mock {
+	/*.screen-mock {
 		width: 50%;
 		float: left;
 		padding-right: 3%;
@@ -690,13 +641,6 @@ img.contact-icon {
 		width: 30%;
 		float: left;
 	}
-	/* These limit the size of the teasers on project pages only*/
-	/*aside section.teaser {
-		width: 20%;
-	}
-	aside section.teaser:nth-child(2) {
-		margin-left: 16%;
-	}*/
 	.more-pj {
 		padding-top: 10%;
 	}
@@ -713,7 +657,7 @@ img.contact-icon {
 	}
 	#projects {
 		min-height: 700px;
-	}
+	}*/
 }
 /* ========== END Media Query (more than 1000px) ========== */
 /* ========== Media Query (more than 1300px) ========== */
@@ -722,10 +666,10 @@ img.contact-icon {
 		width: 14%;
 		padding: 2%;
 	}*/
-	#projects {
+	/*#projects {
 		min-height: 350px;
 		margin-bottom: 10%;
-	}
+	}*/
 }
 /* ========== END Media Query (more than 1300px)  ========== */
 /* ========== Call to Action Animation   -========== */
