--- a/css/main.css
+++ b/css/main.css
@@ -56,11 +56,7 @@ section {
 article{
 	margin: 10% 0;
 }*/
-aside {
-	width: 94%;
-	padding: 0 3%;
-	margin: 10% auto;
-}
+
 footer {
 	text-align: center;
 	clear: both;
@@ -78,7 +74,9 @@ figcaption {
 .hide {
 	display: none;
 }
-
+p + p {
+    margin-top: 1rem;
+}
 h2 {
 	font-size: 1.3rem;
 	padding: 3% 0;
@@ -93,7 +91,6 @@ h3 {
 }
 p {
 	font-size: 1.1rem;
-	padding-bottom: 3%;
 }
 ul {
 	padding: 1% 0;
@@ -121,7 +118,23 @@ img {
 /*.space-top {
 	margin-top: 20%;
 }*/
-
+section:first-child {
+    padding-top: 2.5rem; /* Prevents hamburger menu from covering text  on smooth scroll */
+}
+.home section:not(.splash),
+main,
+aside {
+    margin: 1rem;
+}
+main section {
+    margin: 0;
+}
+article + article {
+    margin-top: 3rem;
+}
+h1 {
+    margin: 1.1rem;
+}
 /* ========== Nav Styles ========== */
 nav ul {
 	width: 100%;
@@ -276,6 +289,13 @@ img.arrow-bounce {
 	animation-iteration-count: infinite;
 	animation-direction: alternate;
 }
+.pj h3 a:link,
+.pj h3 a:active {
+    text-decoration: none;
+}
+.pj h3 a:hover {
+    text-decoration: underline;
+}
 /*#projects {
 	padding: 20% 3% 10%;
 	margin: 0;
@@ -321,6 +341,13 @@ section.short h3 {
 .css-pix {
 	text-align: center;
 }*/
+.single-projects h1,
+.single h1 {
+    margin: 1.1rem 0;
+}
+.post-type-archive-projects article {
+    padding-bottom: 5rem; /* Prevents img from covering skill icons */
+}
 .team-bio {
 	max-width: 220px;
 	vertical-align: top;
@@ -365,7 +392,43 @@ section.short h3 {
 #css-vid h2 {
 	display: none;
 }
+p.pj_intro {
+    padding-top: 5rem;
+}
+ul.pj_view-more_contact {
+    list-style: none;
+    margin: 0.5rem 0 2rem;
+}
+img.pj_contact-icon {
+    width: 4rem;
+}
+li.phone,
+li.email {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+li.email a:link {
+    color: rgb(254, 254, 254);
+}
+
 /* ========== END Project Styles ========== */
+/* ========== Blog Styles ========== */
+ul.blog_post-meta li + li {
+    margin-left: 1.5rem;
+}
+ul.blog_post-meta {
+    list-style: none;
+    display: flex;
+    justify-content: flex-start;
+    margin-bottom: 2rem;
+}
+.blog_footer,
+.blog_comments {
+    margin-top: 3rem;
+    text-align: left;
+}
+/* ========== END Blog Styles ========== */
 /* ========== Contact Styles ========== */
 form {
 	max-width: 500px;
