--- a/css/main.css
+++ b/css/main.css
@@ -74,7 +74,8 @@ figcaption {
 .hide {
 	display: none;
 }
-p + p {
+p + p,
+input#submit {
     margin-top: 1rem;
 }
 h2 {
@@ -134,6 +135,31 @@ article + article {
 }
 h1 {
     margin: 1.1rem;
+}
+button,
+input#submit,
+.button {
+    padding: 0.5em;
+    border-radius: 7px;
+    border: solid 3px rgb(244, 182, 61);
+    background: none;
+    color: rgb(244, 182, 61);
+    font-family: 'black-bamboo','quattrocento', sans-serif;
+    transition: color 1s border 1s filter 0.5s;
+}
+button:hover,
+input#submit:hover,
+.button:hover {
+    filter: invert(30%);
+    transition: filter 0.25s;
+}
+.button:active,
+input#submit:active,
+button:active {
+    color: #000;
+    border-color: rgb(2, 10, 16);
+    filter: drop-shadow(0 0 5px #fff);
+    transition: color 1s border 1s filter 0.5s;
 }
 /* ========== Nav Styles ========== */
 nav ul {
@@ -428,22 +454,83 @@ ul.blog_post-meta {
     margin-top: 3rem;
     text-align: left;
 }
+.avatar {
+    width: 4rem;
+    height: unset;
+    margin-right: 1rem;
+}
+li.comment {
+    list-style: none;
+    margin-bottom: 1rem;
+}
+.comment-meta,
+.comment-options
+ {
+    display: flex;
+    align-items: center;
+    margin-bottom: 1rem;
+}
+.comment-options p.comment_edit,
+.comment-options p.reply {
+    margin: 1rem 1rem 2rem 0;
+}
+#reply-title {
+    padding-bottom: 1rem;
+    margin-top: 3rem;
+}
+.single aside {
+    margin: 5rem 1rem 2rem;
+}
+ul.children { /* Replies to other comments */
+    margin-left: 3rem;
+}
+.comment_text {
+    padding: 1rem;
+    background: rgb(254,254,254);
+    color: rgb(2, 10, 16);
+    border-radius: 8px;
+    margin-top: 1.5rem;
+    position: relative;
+}
+.comment_text::before { /* Create speech bubble effect */
+    content: '';
+    width: 0;
+    height: 0;
+    border-bottom: 15px solid rgb(254,254,254);
+    border-right: 20px solid transparent;
+    border-left: 2px solid transparent;
+    position: absolute;
+    bottom: 100%;
+    left: 10%;
+    transform: skewX(22deg);
+}
+#submit {
+    font-size: 1.2rem;
+}
+form.search {
+    display: flex;
+    align-items: center;
+}
+.search .search-submit {
+    margin-bottom: 1rem;
+    margin-left: 1rem;
+}
 /* ========== END Blog Styles ========== */
 /* ========== Contact Styles ========== */
 form {
 	max-width: 500px;
-	margin: 40% auto 0;
-	padding: 3%;
 }
 input[type="text"],
 input[type="tel"],
 input[type="email"],
+input[type="search"],
 select,
 textarea {
 	display: block;
-	width: 98%;
-	padding: 1%;
-	margin-bottom: 3%;
+	width: 100%;
+	padding: 0.5rem;
+	margin-bottom: 1rem;
+    box-sizing: border-box;
 }
 select {
 	max-width: 280px;
@@ -453,35 +540,9 @@ textarea {
 	min-height: 70px;
 }
 label {
-	font-size: .9rem;
-}
-.form-btn {
-	width: 94%;
-	text-align: center;
-}
-#reset {
-	background-image: url(../img/buttons/reset.png);
-	background-size: cover;
-	background-color: rgb(2,10,16);
-	width: 4rem;
-	height: 2.65rem;
-	margin: 6% 4% 6% 0;
-	vertical-align: middle;
-}
-#reset:hover {
-	background-position: bottom;
-}
-#send {
-	background-image: url(../img/buttons/send.png);
-	background-size: cover;
-	background-color: rgb(2,10,16);
-	width: 6rem;
-	height: 4rem;
-	margin: 6% 0;
-	vertical-align: middle;
-}
-#send:hover {
-	background-position: bottom;
+	font-size: 1rem;
+    margin-bottom: 0.25rem;
+    display: block;
 }
 div.contact-info {
 	margin: 20% 0;
