--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,6 @@ h2,
     font-family: 'black-bamboo', 'quattrocento', sans-serif;
     color: rgb(244,182,61);
 }
-
 /* ========== Basic Styles ========== */
 body {
 	background-color: rgb(2,10,16);
@@ -101,9 +100,6 @@ img {
 	width: 100%;
 	max-width: 750px;
 }
-/*.space-top {
-	margin-top: 20%;
-}*/
 section:first-child {
     padding-top: 2.5rem; /* Prevents hamburger menu from covering text  on smooth scroll */
 }
@@ -176,13 +172,11 @@ p.nav-logo {
     display: inline-block;
     padding: 0;
 }
-
 .main-menu {
     display: flex;
     align-items: center;
     justify-content: center;
 }
-
 nav {
     width: 60%;
 }
@@ -198,7 +192,6 @@ nav {
 }
 
 @media (max-width: 700px) {
-
 	body {
 		overflow-x: hidden; /* Prevents horiz scrollbar from appearing */
 	}
@@ -309,6 +302,47 @@ img.arrow-bounce {
 .pj h3 a:hover {
     text-decoration: underline;
 }
+.pj_container {
+    display: flex;
+}
+/* Project Hover FX */
+article.pj {
+    overflow: hidden;
+    position: relative;
+}
+.home article + article{
+    margin-top:0;
+    margin-left: 0.25rem;
+}
+.pj h3 {
+    position: absolute;
+    top: 0;
+    background: rgba(30,64,43, 0.8);
+    width: 100%;
+    height: 30%;
+    padding: 0.5rem;
+    border-radius: 0 0 0 100%;
+    text-align: right;
+    font-family: 'black-bamboo', 'quattrocento', sans-serif;
+}
+.pj_see-more {
+    position: absolute;
+    top: 0;
+    padding: 40%;
+    border-radius: 50%;
+    height: 140%;
+    width: 140%;
+    background: rgba(21,41,22, 0.9);
+    text-align: left;
+    box-sizing: border-box;
+    transform: rotate(20deg) translate(25%, -100%);
+    transition: transform 1.2s;
+}
+article:hover > .pj_see-more {
+    top: 5%;
+    transform: rotate(0deg) translate(0, 0);
+    transition: transform 1.2s;
+}
 /* ========== END Home Styles  ========== */
 /* ========== Project Styles  ========== */
 .single-projects h1,
@@ -343,7 +377,6 @@ li.email {
 li.email a:link {
     color: rgb(254, 254, 254);
 }
-
 /* ========== END Project Styles ========== */
 /* ========== Blog Styles ========== */
 ul.blog_post-meta li + li {
@@ -458,8 +491,8 @@ div.contact-info {
 }
 /* ========== END Contact Styles ========== */
 /* ========== Media Query (more than 450px) ========== */
-@media (min-width: 450px) {
-	header {
+@media (min-width: 550px) {
+	/*header {
 		padding: 0 2.5%;
 	}
 	li.nav-logo img {
@@ -473,7 +506,8 @@ div.contact-info {
 	}
 	.logo {
 		margin-top: 14%;
-	}
+	}*/
+
 }
 /* ========== END Media Query (more than 450px) ========== */
 /* ========== Media Query (more than 700px)  ========== */
