--- a/css/main.css
+++ b/css/main.css
@@ -122,11 +122,13 @@ h1 {
 }
 /* Button Styles */
 button,
-input#submit {
+input#submit,
+input[type="button"] {
     padding: 0.5rem;
 }
 button,
 input#submit,
+input[type="button"],
 .button a:link,
 .button a:visited {
     padding: 0.5rem;
@@ -141,12 +143,14 @@ input#submit,
 }
 button:hover,
 input#submit:hover,
+input[type="button"]:hover,
 .button a:hover {
     filter: invert(30%);
     transition: filter 0.25s;
 }
 .button a:active,
 input#submit:active,
+input[type="button"]:active,
 button:active {
     color: #000;
     border-color: rgb(2, 10, 16);
@@ -393,10 +397,19 @@ li.email a:link {
 }
 /* ========== END Project Styles ========== */
 /* ========== Blog Index Styles ========== */
+.blog main {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
 article {
     position: relative;
 	overflow: hidden;
     box-sizing: border-box;
+}
+.blog main article {
+    margin: 0.25% 0.5%;
+	width: 48%; /* NOTE TO SELF: THE WIDTH WILL BE NEED TO BE ADJUSTED FOR DIFFERENT BREAKPOINTS TO SET THE NUMBER OF TILES IN A ROW. */
 }
 .blog article h2,
 .date,
@@ -521,6 +534,35 @@ form.search {
 }
 /* ========== END Blog Styles ========== */
 /* ========== Contact Styles ========== */
+.contact_intro,
+.contact_listings,
+.contact_form {
+    margin-top: 2.5rem;
+}
+li.contact_email,
+li.contact_phone {
+	display: flex;
+	align-items: center;
+}
+li.contact_email::before,
+li.contact_phone::before {
+    content: "";
+	display: inline-block;
+	width:4rem;
+	height:4rem;
+	background-size:contain;
+	margin-right: 1rem;
+}
+li.contact_phone::before {
+    background-image: url(../img/phone-icon.png);
+}
+li.contact_email::before {
+    background-image: url(../img/email-icon.png);
+}
+div.nf-error-msg,
+span.ninja-forms-req-symbol {
+    color: rgb(244, 182, 61);
+}
 form {
 	max-width: 500px;
 }
@@ -530,7 +572,7 @@ input[type="email"],
 input[type="search"],
 select,
 textarea {
-	display: block;
+	/*display: block;*/
 	width: 100%;
 	padding: 0.5rem;
 	margin-bottom: 1rem;
@@ -548,9 +590,7 @@ label {
     margin-bottom: 0.25rem;
     display: block;
 }
-div.contact-info {
-	margin: 20% 0;
-}
+
 /* ========== END Contact Styles ========== */
 /* ========== Media Query (more than 450px) ========== */
 @media (min-width: 550px) {
